Fix layout top margin gap

--- a/design/scss/layout/layout.scss
+++ b/design/scss/layout/layout.scss
@@ -1,6 +1,7 @@
 %layout {
   box-sizing: border-box;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   max-width: $page-width;
   padding: .5em 1em;
 
